@@ -45,7 +45,7 @@ require 'oval/hash_item'
 class Oval::Collection < Oval::Base
   def validate(collection, subject = nil)
     class_subject = subject.nil? ? nil : "#{subject}.class"
-    self.class.ensure_match(collection.class, class_decl, class_subject)
+    self.class.validate(collection.class, class_decl, class_subject)
     i = 0
     collection.each { |item| item_validator.validate(item, i, subject); i+= 1}
   end
